refactor(UserMapper): update UserMapper